tela inicial feita, falta ajustes de responsividade e algumas funcionalidades de alguns botoes

--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
 <body>
     <header>
         <nav>
-            reservas salle
+            <h1>RESERVAS <br>SALLE</h1>
             <ul>
                 <li><a href="espacos.html">Espaços</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
+                <li><img src="assets/contact.png" class="perfil"></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
+            <div class="container">
             <h2>Busque seu primeiro espaço</h2>
             <input type="text" placeholder="nome de alguma coisa...">
-            <button>Pesquisar</button>    
+            <button>Pesquisar</button> 
+            </div>   
         </section>
     </main>
     <footer>
