Criação de 2 telas de login e cadastro mega simples, e mudanças nas telas sobre e espaços (coloquei o header funcionando os hyperlinks)

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <nav>
-            <h1>RESERVAS <br>SALLE</h1>
+            <a href="index.html"> <h1> RESERVAS <br>SALLE</h1></a>
             <ul>
                 <li><a href="espacos.html">Espaços</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
-                <li><img src="assets/contact.png" class="perfil"></li>
+                <li><a href="login.html"><img src="assets/contact.png" class="perfil"></a></li>
             </ul>
         </nav>
     </header>
