--- a/sobre.html
+++ b/sobre.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Reservas Salle</title>
 </head>
 <body>
-    <h1>ainda em desenvolvimento</h1>
-    <a href="index.html">Voltar para o Inicio</a>
+    <header>
+        <nav>
+            <a href="index.html"> <h1> RESERVAS <br>SALLE</h1></a>
+            <ul>
+                <li><a href="espacos.html">Espaços</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="login.html"><img src="assets/contact.png" class="perfil"></a></li>
+            </ul>
+        </nav>
+    </header>
+    <div>
+        <h2>Em desenvolvimento</h2>
+    </div>
 </body>
 </html>
