--- a/public/espacos.html
+++ b/public/espacos.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"> <h1> RESERVAS <br>SALLE</h1></a>
+            <a href="/"> <h1> RESERVAS <br>SALLE</h1></a>
             <ul>
-                <li><a href="espacos.html">Espaços</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="login.html"><img src="assets/contact.png" class="perfil"></a></li>
+                <li><a href="/espacos">Espaços</a></li>
+                <li><a href="/sobre">Sobre</a></li>
+                <li><a href="/login"><img src="assets/contact.png" class="perfil">Fazer Login</a></li>
             </ul>
         </nav>
     </header>
