--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="\css\style.css">
     <title>Reservas Salle</title>
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html"> <h1> RESERVAS <br>SALLE</h1></a>
+            <a href="/"> <h1> RESERVAS <br>SALLE</h1></a>
             <ul>
-                <li><a href="espacos.html">Espaços</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="login.html"><img src="assets/contact.png" class="perfil"></a></li>
+                <li><a href="/espacos">Espaços</a></li>
+                <li><a href="/sobre">Sobre</a></li>
+                <li><a href="/login"><img src="assets/contact.png" class="perfil">Fazer Login</a></li>
             </ul>
         </nav>
     </header>
