--- a/public/login.html
+++ b/public/login.html
@@ -14,7 +14,8 @@
                 Email: <input type="email" name="" id="" required>
                 Senha: <input type="password" name="" id="" required>
                 <button type="submit">Login</button>
-                <a href="cadastro.html">Criar Conta</a>
+                <p id="mensagem"></p>
+                <a href="/cadastro">Criar Conta</a>
             </form>
        
         </section>
