Criação da pasta de controller, service e models com .js de cada um. Além de fazer a logica pra puxar os dados do banco de dados na aba de espaços

--- a/public/espacos.html
+++ b/public/espacos.html
@@ -19,6 +19,8 @@
     </header>
     <div>
         <h2>Em desenvolvimento</h2>
+        <ul id="lista-espacos"></ul>
     </div>
+    <script src="js/scriptEspacos.js"></script>
 </body>
 </html>
