--- a/public/login.html
+++ b/public/login.html
@@ -9,10 +9,10 @@
 <body>
     <main>
         <section>
-            <form class="container" action="" method="POST">
+            <form id="loginForm" class="container" action="" method="POST">
                 <h2>LOGIN</h2>
-                Email: <input type="email" name="" id="" required>
-                Senha: <input type="password" name="" id="" required>
+                Email: <input type="email" name="" id="email" required>
+                Senha: <input type="password" name="" id="senha" required>
                 <button type="submit">Login</button>
                 <p id="mensagem"></p>
                 <a href="/cadastro">Criar Conta</a>
@@ -20,5 +20,6 @@
        
         </section>
     </main>
+    <script src="\js\scriptLogin.js"></script>
 </body>
 </html>
