Criação de autenticacao do usuario com cookies, agr o sistema reconhece o login e o usuario consegue deslogar

--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,27 @@
     <link rel="stylesheet" href="\css\style.css">
     <title>Reservas Salle</title>
 </head>
+
 <body>
+    
     <header>
         <nav>
             <a href="/"> <h1> RESERVAS <br>SALLE</h1></a>
             <ul>
                 <li><a href="/espacos">Espaços</a></li>
                 <li><a href="/sobre">Sobre</a></li>
-                <li><a href="/login"><img src="assets/contact.png" class="perfil">Fazer Login</a></li>
+                <li>
+                    <a href="/login">
+                        <img src="assets/contact.png" class="perfil">
+                        <span class="login-texto">Fazer Login</span>
+                    </a>
+                    <div id="dropdown" class="dropdown-content" style="display: none;">
+                        <a href="/meu-perfil">Meu Perfil</a>
+                        <a href="/minhas-reservas">Minhas Reservas</a>
+                        <a href="/meus-espacos">Meus Espaços</a>
+                        <a href="/logout" id="sair">Sair</a>
+                    </div>
+                </li>
             </ul>
         </nav>
     </header>
@@ -29,5 +42,7 @@
     <footer>
         <p>2024 Reservas Salle. Todos os direitos reservados.</p>
     </footer>
+    <script src="js/navigation.js"></script>
+    <script src="js/scriptHeader.js"></script>
 </body>
 </html>
