--- a/public/sobre.html
+++ b/public/sobre.html
@@ -13,12 +13,25 @@
             <ul>
                 <li><a href="/espacos">Espaços</a></li>
                 <li><a href="/sobre">Sobre</a></li>
-                <li><a href="/login"><img src="assets/contact.png" class="perfil">Fazer Login</a></li>
+                <li>
+                    <a href="/login">
+                        <img src="assets/contact.png" class="perfil">
+                        <span class="login-texto">Fazer Login</span>
+                    </a>
+                    <div id="dropdown" class="dropdown-content" style="display: none;">
+                        <a href="/meu-perfil">Meu Perfil</a>
+                        <a href="/minhas-reservas">Minhas Reservas</a>
+                        <a href="/meus-espacos">Meus Espaços</a>
+                        <a href="/logout" id="sair">Sair</a>
+                    </div>
+                </li>
             </ul>
         </nav>
     </header>
     <div>
         <h2>Em desenvolvimento</h2>
     </div>
+    <script src="js/navigation.js"></script>
+    <script src="js/scriptHeader.js"></script>
 </body>
 </html>
