Ajuste no BD, Ajuste no formulário de cadastro e ajuste em listar os espaços. Criação de pagina para ver sobre o espaço

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -11,6 +11,9 @@
         <section>
             <form id="cadastroForm" class="container" action="" method="POST">
                 <h2>Cadastro</h2>
+                Nome: <input type="text" name="nome" id="nome" required>
+                Telefone: <input type="tel" name="telefone" id="telefone">
+                Data de nascimento: <input type="date" name="data_nascimento" id="data_nascimento" required>
                 Email: <input type="email" name="email" id="email" required>
                 Senha: <input type="password" name="senha" id="senha" required>
                 Digite novamente a senha: <input type="password" name="confirmarSenha" id="confirmarSenha" required>
@@ -21,7 +24,7 @@
        
         </section>
     </main>
-    <script src="\js\scriptCadastro.js">
+    <script src="/js/scriptCadastro.js">
     </script>
 </body>
 </html>
