--- a/public/espacos.html
+++ b/public/espacos.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="\css\style.css">
     <title>Reservas Salle</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
                 <li><a href="/sobre">Sobre</a></li>
                 <li>
                     <a href="/login">
-                        <img src="assets/contact.png" class="perfil">
+                        <img src="/assets/contact.png" class="perfil">
                         <span class="login-texto">Fazer Login</span>
                     </a>
                     <div id="dropdown" class="dropdown-content" style="display: none;">
@@ -32,8 +32,8 @@
         <h2>Em desenvolvimento</h2>
         <ul id="lista-espacos"></ul>
     </div>
-    <script src="js/navigation.js"></script>
-    <script src="js/scriptHeader.js"></script>
-    <script src="js/scriptEspacos.js"></script>
+    <script src="/js/navigation.js"></script>
+    <script src="/js/scriptHeader.js"></script>
+    <script src="/js/scriptEspacos.js"></script>
 </body>
 </html>
