--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
                 <li><a href="/sobre">Sobre</a></li>
                 <li>
                     <a href="/login">
-                        <img src="assets/contact.png" class="perfil">
+                        <img src="/assets/contact.png" class="perfil">
                         <span class="login-texto">Fazer Login</span>
                     </a>
                     <div id="dropdown" class="dropdown-content" style="display: none;">
@@ -42,7 +42,7 @@
     <footer>
         <p>2024 Reservas Salle. Todos os direitos reservados.</p>
     </footer>
-    <script src="js/navigation.js"></script>
-    <script src="js/scriptHeader.js"></script>
+    <script src="/js/navigation.js"></script>
+    <script src="/js/scriptHeader.js"></script>
 </body>
 </html>
