--- a/public/sobre.html
+++ b/public/sobre.html
@@ -15,7 +15,7 @@
                 <li><a href="/sobre">Sobre</a></li>
                 <li>
                     <a href="/login">
-                        <img src="assets/contact.png" class="perfil">
+                        <img src="/assets/contact.png" class="perfil">
                         <span class="login-texto">Fazer Login</span>
                     </a>
                     <div id="dropdown" class="dropdown-content" style="display: none;">
@@ -31,7 +31,7 @@
     <div>
         <h2>Em desenvolvimento</h2>
     </div>
-    <script src="js/navigation.js"></script>
-    <script src="js/scriptHeader.js"></script>
+    <script src="/js/navigation.js"></script>
+    <script src="/js/scriptHeader.js"></script>
 </body>
 </html>
