--- a/public/meus_espacos.html
+++ b/public/meus_espacos.html
@@ -30,10 +30,10 @@
     </header>
 
     <div class="containerx">
-        <section class="espacos-container">
+        <div class="espacos-container">
             <div class="header-actions">
                 <h2>Meus Espaços</h2>
-                <button id="btnAddEspaco" class="btn">Adicionar Novo Espaço</button>
+                <button id="btnAddEspaco" class="btn" onclick="openAddModal()">Adicionar Novo Espaço</button>
             </div>
 
             <div class="espacos-toggle">
@@ -44,7 +44,7 @@
             <div id="espacos-lista">
                 <!-- Os espaços serão inseridos aqui dinamicamente -->
             </div>
-        </section>
+        </div>
     </div>
 
     <!-- Modal de Edição de Espaço (Overlay) -->
@@ -75,7 +75,60 @@
         <div id="deleteModal">
             <h2>Tem certeza que deseja excluir este espaço?</h2>
             <button id="confirmDelete">Sim, Excluir</button>
-            <button id="cancelDelete">Cancelar</button>
+            <button id="cancelDelete" onclick="closeDeleteModal()">Cancelar</button>
+        </div>
+    </div>
+
+    <!-- Modal de Cadastro de Novo Espaço (Overlay) -->
+    <div id="addOverlay" class="hide">
+        <div id="addModal">
+            <h2>Cadastrar Novo Espaço</h2>
+            <form id="formAddEspaco">
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome" required>
+
+                <label for="descricao">Descrição:</label>
+                <textarea id="descricao" name="descricao" required></textarea>
+
+                <label for="capacidade">Capacidade:</label>
+                <input type="number" id="capacidade" name="capacidade" required>
+
+                <label for="imagem">Imagem (URL):</label>
+                <input type="text" id="imagem" name="imagem" required>
+
+                <label for="cep">CEP:</label>
+                <input type="text" id="cep" name="cep" required>
+
+                <label for="rua">Rua:</label>
+                <input type="text" id="rua" name="rua" required>
+
+                <label for="numero">Número:</label>
+                <input type="text" id="numero" name="numero" required>
+
+                <label for="complemento">Complemento:</label>
+                <input type="text" id="complemento" name="complemento">
+
+                <label for="bairro">Bairro:</label>
+                <input type="text" id="bairro" name="bairro" required>
+
+                <label for="cidade">Cidade:</label>
+                <input type="text" id="cidade" name="cidade" required>
+
+                <label for="estado_sigla">Estado (Sigla):</label>
+                <input type="text" id="estado_sigla" name="estado_sigla" required>
+
+                <label for="preco">Preço:</label>
+                <input type="number" id="preco" name="preco" step="0.01" required>
+
+                <label for="status">Status:</label>
+                <select id="status" name="status" required>
+                    <option value="disponivel">Disponível</option>
+                    <option value="indisponivel">Indisponível</option>
+                </select>
+
+                <button type="submit">Cadastrar Espaço</button>
+                <button type="button" id="cancelAdd" onclick="closeAddModal()">Cancelar</button>
+            </form>
         </div>
     </div>
 
