minor error check

--- a/public/espaco.html
+++ b/public/espaco.html
@@ -7,6 +7,7 @@
     
     <!-- Link to external CSS -->
     <link rel="stylesheet" href="/css/espaco.css">
+    <link rel="stylesheet" href="/css/header-footer.css">
 </head>
 <body>
     <header>
