--- a/public/espacos.html
+++ b/public/espacos.html
@@ -36,5 +36,5 @@
     <script src="/js/navigation.js"></script>
     <script src="/js/scriptHeader.js"></script>
     <script src="/js/scriptEspacos.js"></script>
-<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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/body>
+<body>
 </html>
