--- a/public/sobre.html
+++ b/public/sobre.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/sobre.css">
     <link rel="stylesheet" href="/css/header-footer.css">
-    <title>Reservas Salle</title>
+    <title>Sobre - Reservas Salle</title>
 </head>
 <body>
     <header>
@@ -29,9 +29,38 @@
             </ul>
         </nav>
     </header>
-    <div>
-        <h2>Em desenvolvimento</h2>
-    </div>
+    <main>
+        <section class="about-container">
+            <!-- First Row: Title and First Image with Text -->
+            <div class="about-row">
+                <div class="about-title">
+                    <h2>Quem somos</h2>
+                    <img src="/assets/sobre/first_idea.jpg" class="about-image">
+                </div>
+                <div class="about-text">
+                    <p>Reservas Salle é a sua solução para agendar espaços de forma prática e eficiente. Nossa missão é oferecer uma plataforma de fácil utilização para gerenciar reservas com total transparência e confiança.</p>
+                </div>
+            </div>
+
+            <!-- Second Row: List on the right and Image on the left -->
+            <div class="about-row reverse">
+                <div class="about-image-container">
+                    <img src="/assets/sobre/fakenews.jpg" class="about-image">
+                </div>
+                <div class="about-text">
+                    <ul style="display: inline;">
+                        <li> Miguel Yuji Gomes Toyama </li>
+                        <li> Caio Henrique Ramos de Souza </li>
+                        <li> Tiago de Andrade Rocha </li>
+                        <li> Lucas Silveira da Silva </li>
+                        <li> Cauã Donofreo </li>
+                        <li> Rodrigo Lemos Leme </li>
+                        <li> Pedro Oliveira Silva </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="/js/navigation.js"></script>
     <script src="/js/scriptHeader.js"></script>
 </body>
