--- a/public/meus_espacos.html
+++ b/public/meus_espacos.html
@@ -98,7 +98,7 @@
                 </select>
 
                 <!-- Botões de ação -->
-                <button type="submit" onclick="editarEspaco()">Salvar Alterações</button>
+                <button type="submit" onclick="editarEspaco(event)">Salvar Alterações</button>
                 <button type="button" id="cancelEdit" onclick="closeEditModal()">Cancelar</button>
             </form>
         </div>
