--- a/public/minhas_reservas.html
+++ b/public/minhas_reservas.html
@@ -29,16 +29,10 @@
         </nav>
     </header>
     <div class="reservas-container">
+        <h2>Minhas Reservas</h2>
         <!-- Div que mostra o nome do espaço e o dropdown com detalhes da reserva -->
-        <div class="espaco-reserva">
-            <h3 class="nome-espaco">Espaço XYZ</h3>
-            <div class="dropdown" style="display: none;">
-                <p><strong>Data Início:</strong> 2024-12-10 10:00</p>
-                <p><strong>Data Fim:</strong> 2024-12-10 12:00</p>
-                <p><strong>Status:</strong> Confirmada</p>
-                <p><strong>Forma de Pagamento:</strong> Débito</p>
-                <button class="btn-cancelar" onclick="openModalCancelar()">Cancelar Reserva</button>
-            </div>
+        <div id="espaco-reserva">
+            
         </div>
     </div>
 
