--- a/public/perfil.html
+++ b/public/perfil.html
@@ -32,6 +32,8 @@
     <div>
         <h2>Meu Perfil</h2>
         <div class="perfil-info">
+            <p><strong>Nome</strong> <span id="nome"></span></p>
+            <p><strong>Telefone:</strong> <span id="tel"></span></p>
             <p><strong>Email:</strong> <span id="email"></span></p>
             <p><strong>Senha:</strong> <span id="senha"></span></p>
         </div>
