--- a/public/reservas_do_espaco.html
+++ b/public/reservas_do_espaco.html
@@ -31,6 +31,7 @@
     
     <div id="reservas-list">
         <h2>Reservas deste espaço</h2>
+        <p id="reserva-info"></p>
         <ul id="reservas-lista"></ul>
     </div>
 
