--- a/public/reservar_espaco.html
+++ b/public/reservar_espaco.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <title>Reservar Espaço</title>
 </head>
 <body>
@@ -56,6 +57,6 @@
 
     <script src="/js/navigation.js"></script>
     <script src="/js/scriptHeader.js"></script>
-    <script src="/js/reserva.js"></script>
+    <script src="/js/scriptReservarEspaco.js"></script>
 </body>
 </html>
