brinks, esse é o ultimo commit de hj

--- a/public/espacos.html
+++ b/public/espacos.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
     <div>
-        <h2>Em desenvolvimento</h2>
+        <h2>Espaços Disponíveis</h2>
         <ul id="lista-espacos"></ul>
     </div>
     <script src="/js/navigation.js"></script>
