--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,7 @@
         <section>
             <div class="container">
             <h2>Busque seu primeiro espaço</h2>
-            <input type="text" placeholder="nome de alguma coisa...">
-            <button>Pesquisar</button> 
+            <a href="/espacos"><button>Ver Espaços</button></a> 
             </div>   
         </section>
     </main>
