--- a/public/perfil.html
+++ b/public/perfil.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
 
-    <div>
+    <div class="container-perfil">
         <h2>Meu Perfil</h2>
         <div class="perfil-info">
             <p><strong>Nome</strong> <span id="nome"></span></p>
