--- a/public/sobre_espaco.html
+++ b/public/sobre_espaco.html
@@ -28,14 +28,21 @@
             </ul>
         </nav>
     </header>
-    <div>
+    <div class="div-sobre-espaco">
         <h1 id="nome-espaco"></h1>
         <img id="imagem-espaco" />
         <p id="descricao-espaco"></p>
+        <p>Bairro: <span id="bairro-espaco"></span></p>
+        <p>Capacidade: <span id="capacidade-espaco"></span></p>
+        <p>Cidade: <span id="cidade-espaco"></span></p>
+        <p>Estado: <span id="estado-espaco"></span></p>
+        <p>Rua: <span id="rua-espaco"></span></p>
+        <p>Complemento: <span id="comple-espaco"></span></p>
+        <p>Número: <span id="num-espaco"></span></p>
         <p id="preco-espaco"></p>
         <!-- Link do botão "Reservar" -->
         <a id="reservar-link" href="#">
-            <button>Reservar</button>
+            <button class="botao-reservar">Reservar</button>
         </a>
     </div>
     <script src="/js/navigation.js"></script>
